--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,11 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build:style && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:style": "postcss css/tailwind.css -o public/build/tailwind.css"
+    "build:style": "postcss src/css/index.css -o public/build/tailwind.css"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
