--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:style": "postcss src/css/index.css -o public/build/tailwind.css"
+    "build:style": "postcss src/css/index.css -o public/build/tailwind.css",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
