--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "proxy": "http://localhost:5000",
-    "build": "postcss css/tailwind.css -o public/build/tailwind.css"
+    "proxy": "http://localhost:5000"
   },
   "author": "",
   "license": "ISC",
