--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^9.8.0",
     "nodemon": "^2.0.4",
     "postcss-cli": "^7.1.1",
+    "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.4.6"
   }
 }
