--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "proxy": "http://localhost:5000"
   },
   "proxy": "http://localhost:5000",
@@ -21,6 +22,7 @@
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
