--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,30 @@
   "main": "src/index.js",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.28",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
+    "normalizr": "^3.6.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "tailwind.macro": "^1.0.0-alpha.10",
+    "tailwindcss": "^1.5.2"
   },
   "scripts": {
     "start": "npm run build:style && react-scripts start",
