--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.28",
-    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
@@ -28,29 +26,13 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.16",
-    "normalizr": "^3.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-datepicker": "^3.0.0",
-    "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.3",
     "validator": "^13.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.0",
     "nodemon": "^2.0.4",
-    "postcss-cli": "^7.1.1",
-    "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.5.2"
+    "postcss-cli": "^7.1.1"
   }
 }
