--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.9.16",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "tailwindcss": "^1.6.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
